--- a/styles/sass/menu.scss
+++ b/styles/sass/menu.scss
@@ -7,7 +7,9 @@
 @import './Base/global';
 
 @import './Composants/button';
+@import './Composants/heart';
 @import './Composants/meal_item';
+@import './Composants/underline';
 
 @import './Layout/header_menu';
 @import './Layout/meal_section';
