--- a/styles/sass/Composants/_loading.scss
+++ b/styles/sass/Composants/_loading.scss
@@ -2,7 +2,7 @@
 
 
 
-.loading-container{
+.loading{
     width: 100%;
     height: 100%;
     display: flex;
@@ -20,7 +20,7 @@
         color: $primary-color;
     }
 
-    .loading{
+    &-rotate{
         width: 5rem;
         height: 5rem;
         border: 5px solid;
