--- a/styles/sass/accueil.scss
+++ b/styles/sass/accueil.scss
@@ -7,7 +7,7 @@
 @import './Base/global';
 
 @import './Composants/button';
-//@import './Composants/heart';
+@import './Composants/heart';
 @import './Composants/step';
 @import './Composants/restaurant';
 @import './Composants/loading';
